fix: correção reset carrinho e botões + formatação e validação de datas

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
       <div class="cart-services" id="cartServices">
         <p>Nenhum item selecionado</p>
       </div>
-      <button class="btn" id="sendOrder" >Enviar agendamento</button>
+      <button class="btn" id="sendOrder" data-service>Enviar agendamento</button>
     </section>
     <!---------------------------------------------------------------------------------------->
 
