--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             width="100px"
           />
         </a>
-        <nav class="navbar">
+        <nav class="navbar" id="navbar">
           <a href="#home">Home</a>
           <a href="#about">Sobre</a>
           <a href="#servico">Serviços</a>
@@ -33,14 +33,24 @@
         </nav>
 
         <div class="icons">
-          <img
+          <img 
+            class="btnDesktop"
             src="https://img.icons8.com/ios-filled/30/ffffff/search--v1.png"
             alt="search--v1"
           />
           <img
+            class="btnDesktop"
             id="cartIcon"
             src="https://img.icons8.com/ios-glyphs/30/ffffff/shopping-cart--v1.png"
             alt="shopping-cart--v1"
+          />
+          <img 
+            class="btnMobile"
+            id="btnMobile"
+            width="30" 
+            height="30"
+            src="https://img.icons8.com/ios-glyphs/30/ffffff/drag-list-down.png"
+            alt="drag-list-down"
           />
         </div>
       </section>
@@ -57,7 +67,7 @@
             Oferecemos cortes masculinos, barba e tratamentos pensados para quem
             valoriza qualidade, conforto e um visual impecável.
           </p>
-          <button href="#" class="btn">Agende seu horário</button>
+          <a href="#servico" class="btn">Escolha seu serviço</a>
         </div>
       </section>
     </div>
