fix: atualizações para responsividade mobile.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
@@ -33,21 +33,29 @@
         </nav>
 
         <div class="icons">
-          <img 
+          <img
             class="btnDesktop"
             src="https://img.icons8.com/ios-filled/30/ffffff/search--v1.png"
             alt="search--v1"
           />
           <img
-            class="btnDesktop"
+            class="btnDesktop1"
             id="cartIcon"
             src="https://img.icons8.com/ios-glyphs/30/ffffff/shopping-cart--v1.png"
             alt="shopping-cart--v1"
           />
-          <img 
+          <img
+            class="btnDrop"
+            id="btnDrop"
+            width="30"
+            height="30"
+            src="https://img.icons8.com/ios-filled/30/ffffff/bulleted-list.png"
+            alt="bulleted-list"
+          />
+          <img
             class="btnMobile"
             id="btnMobile"
-            width="30" 
+            width="30"
             height="30"
             src="https://img.icons8.com/ios-glyphs/30/ffffff/drag-list-down.png"
             alt="drag-list-down"
@@ -383,7 +391,7 @@
     <section class="cart-painel" id="cartPainel">
       <div class="cart-form">
         <h2>NOME E <span>DATA</span>:</h2>
-        <input type="text" placeholder="Seu nome" id="nameCliente">
+        <input type="text" placeholder="Seu nome" id="nameCliente" />
         <input type="date" id="date" />
       </div>
 
@@ -395,7 +403,9 @@
       <div class="cart-services" id="cartServices">
         <p>Nenhum item selecionado</p>
       </div>
-      <button class="btn" id="sendOrder" data-service>Enviar agendamento</button>
+      <button class="btn" id="sendOrder" data-service>
+        Enviar agendamento
+      </button>
     </section>
     <!---------------------------------------------------------------------------------------->
 
