fix: atualização css

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
       </section>
     </div>
 
+    <!-- ABOUT -->
     <section class="about" id="about">
       <h2 class="title">SOBRE <span>NÓS</span></h2>
       <div class="row">
